# tf_entropy

./: .gitignore  env_vars.sample  makefile  pyproject.toml
scripts/eda/: eda_secop.py  eda_toydata.py
scripts/preprocessing/: pre_secop.py  pre_toymodel.py
scripts/toy_model/: 00coin_entropy.py  tf_idf.py
scripts/training/: train_model.py
tf_entropy/database/: io.py
tf_entropy/datamodels/: datadic.py  environment.py
tf_entropy/environment/: base.py  spark.py
tf_entropy/models/: feature_extraction.py
tf_entropy/preprocessing/: dataset.py  pipeline.py  text.py
tf_entropy/visualization/: eda.py
