[tool.poetry]
name = "tf_entropy"
version = "0.1.0"
description = "Paquete del trabajo de grado donde se implementa tf-entropy"
authors = ["Santiago Bello <isbelloq@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pydantic = "^1.9.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
jupyter = "^1.0.0"
jupytext = "^1.13.5"
jupyterthemes = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
